--- a/hypr/conf/decorations.conf
+++ b/hypr/conf/decorations.conf
@@ -16,11 +16,20 @@ general {
     layout = dwindle
 }
 
+group {
+    col.border_active = $color1 $color13 $color5
+    col.border_inactive = rgba(0,0,0,0) rgba(0,0,0,1)
+}
+
 general {
     col.active_border = $color1 $color2 $color3 $color4 $color5 $color6 $color8 $color9 $color11 $color13 
     col.inactive_border = rgba(0,0,0,0) rgba(0,0,0,1)
 }
-
+cursor {
+    inactive_timeout = 3
+    hide_on_key_press = true
+    hide_on_touch = true
+}
 # Decorations
 decoration {
     rounding = 10
@@ -61,6 +70,3 @@ misc {
 }
 
 
-# border_size = 3
-    # col.active_border = rgba(96,1,186,1) rgba(217,208,212,1) rgba(255,105,180,1) rgba(25,62,229,1)
-    # col.inactive_border = rgba(0,0,0,0) rgba(0,0,0,1)
