--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -11,22 +11,22 @@ $mainMod = SUPER
 $app = $HOME/.config/hypr/scripts/apps.sh
 bind = $mainMod, Q, exec, kitty
 bind = $mainMod, R, exec, $app Menu
-bind = $mainMod, T, exec, $app Tele
-bind = $mainMod, D, exec, $app Discord
+bind = $mainMod, T, exec, Telegram
+bind = $mainMod, D, exec, discord
 bind = $mainMod, E, exec, $app Yazi
 bind = CTRL, TAB, exec, $app Window
-bind = $mainMod, B, exec, $app Brave
-bind = CTRL ALT, T, exec, $app Foot
-bind = $mainMod, V, exec, $app Code
+bind = $mainMod, B, exec, brave
+bind = CTRL ALT, T, exec, foot
+bind = $mainMod, V, exec, code
 
 # Floating aplication
 bind = CTRL SHIFT, Escape, exec, [float; move 20% 17.5%; size 60% 65%] $app Btop
-bind = CTRL ALT, E, exec, [float; move 0.5% 1%; size 55% 56% ] $app yazi
+bind = CTRL ALT, E, exec, [float; move 0.5% 1%; size 55% 56% ] $app Yazi
 bind = CTRL ALT, C, exec, [float; move 51.50% 64%; size 48% 35%] $app Cava
 bind = CTRL ALT, S, exec, [float; move -3.5% -3.5%; size 50% 60%] $app Spotify 
 bind = CTRL ALT, X, exec, [float; move 0.5% 5%; size 55% 56% ] $app Cmus
-bind = $mainMod SHIFT, Q,  exec, [float; move 20% 17.5%; size 60% 65%] $app Foot
-bind = $mainMod SHIFT, C, exec, [float; move 0.5% 74%; size 99% 25%] $app Cava
+bind = $mainMod SHIFT, Q,  exec, [float; move 20% 17.5%; size 60% 65%] foot
+bind = $mainMod SHIFT, C, exec, [float; move 0.5% 72%; size 99% 25%] $app Cava
 bind = SHIFT, F12, exec, [float; move 59.5% 6%; size 39.5% 65% ] $app Mpv
 bind = CTRL SHIFT, Q, exec, [float; move 60% 5%] $app Conky
 
@@ -66,7 +66,6 @@ bind = ,F12, exec, $tgl Clock
 bind = $mainMod, G, togglegroup, s
 bindd = $mainMod Control, H, $d change active group backwards   , changegroupactive, b
 bindd = $mainMod Control, L, $d change active group forwards  , changegroupactive, f
-bind = $mainMod, SHIFT_R, exec, systemctl suspend
 bind = $mainMod SHIFT, TAB, changegroupactive, f
 
 # Hyprland keybindings
@@ -75,6 +74,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, W, togglefloating,
 bind = $mainMod SHIFT, R, exec, hyprctl reload
+# bind = $mainMod, SHIFT_R, exec, systemctl suspend
 bind = $mainMod, BACKSPACE, exit,
 bind = ALT_R, Return, fullscreen, # toggle the window between focus and fullscreen
 
@@ -125,25 +125,26 @@ bindm = $mainMod, X, resizewindow
 bindm = $mainMod, Z, movewindow
 
 # Switch workspaces to a relative workspace
-bind = $mainMod+Ctrl, Right, workspace, r+1
-bind = $mainMod+Ctrl, Left, workspace, r-1
+bind = $mainMod CTRL, Right, workspace, r+1
+bind = $mainMod CTRL, Left, workspace, r-1
 
 # Move to the first empty workspace
-bind = $mainMod+Ctrl, Down, workspace, empty
+bind = $mainMod CTRL, Down, workspace, empty
+bind = $mainMod CTRL, Up, workspace, previous
 
 # Multimedia & audio
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = SHIFT, right, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = SHIFT, left, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = $mainMod ALT, Right, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bindel = $mainMod ALT, Left, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 
 # LCD brightness
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
-bindel = SHIFT, up, exec, brightnessctl -e4 -n2 set 5%+
-bindel = SHIFT, down, exec, brightnessctl -e4 -n2 set 5%-
+bindel = $mainMod ALT, up, exec, brightnessctl -e4 -n2 set 5%+
+bindel = $mainMod ALT, down, exec, brightnessctl -e4 -n2 set 5%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
