--- a/hypr/conf/startup.conf
+++ b/hypr/conf/startup.conf
@@ -5,19 +5,14 @@
 # ███████║   ██║   ██║  ██║██║  ██║   ██║   ╚██████╔╝██║     
 # ╚══════╝   ╚═╝   ╚═╝  ╚═╝╚═╝  ╚═╝   ╚═╝    ╚═════╝ ╚═╝     
 
-$scripts = $HOME/.config/hypr/scripts
-$wallpaper=  $HOME/Pictures/Wallpaper
-$vol = pamixer --get-volume
-
 # exec-once = waybar
 exec-once = mako
-exec-once = /usr/bin/gnome-keyring-daemon --start --components=secrets,pkcs11,ssh,gpg
+# exec-once = /usr/bin/gnome-keyring-daemon --start --components=secrets,pkcs11,ssh,gpg # Uncomment this line if you log in using a display manager
 exec-once = hypridle
 
 #Wallpaper
-# exec-once = swww-daemon
-# exec-once = swww img $wallpaper/mayat.jpeg --transition-type none
-# exec-once = $scripts/randomwallpaper.sh daemon
+$wlp = $HOME/.config/hypr/scripts/wallpaper_select.sh
+# exec-once = $wlp daemon
 
 # Setup clipboard
 exec-once = wl-paste --type text --watch cliphist store 
