--- a/hypr/conf/input.conf
+++ b/hypr/conf/input.conf
@@ -24,8 +24,8 @@ input {
 
 # Gestures
 gestures {
-    workspace_swipe = true
-    workspace_swipe_fingers = 3
+    # workspace_swipe = true
+    # workspace_swipe_fingers = 3
 }
 
 # Example per-device config
