--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -22,11 +22,11 @@ bind = $mainMod, V, exec, code
 # Floating aplication
 bind = CTRL SHIFT, Escape, exec, [float; move 20% 17.5%; size 60% 65%] $app Btop
 bind = CTRL ALT, E, exec, [float; move 0.5% 1%; size 55% 56% ] $app Yazi
-bind = CTRL ALT, C, exec, [float; move 51.50% 64%; size 48% 35%] $app Cava
+bind = CTRL ALT, C, exec, [float; move 51.50% 64%; size 48% 35%] foot
 bind = CTRL ALT, S, exec, [float; move -3.5% -3.5%; size 50% 60%] $app Spotify 
 bind = CTRL ALT, X, exec, [float; move 0.5% 5%; size 55% 56% ] $app Cmus
 bind = $mainMod SHIFT, Q,  exec, [float; move 20% 17.5%; size 60% 65%] foot
-bind = $mainMod SHIFT, C, exec, [float; move 0.5% 72%; size 99% 25%] $app Cava
+bind = $mainMod SHIFT, C, exec, [float; move 0.5% 72%; size 99% 25%] foot
 bind = SHIFT, F12, exec, [float; move 59.5% 6%; size 39.5% 65% ] $app Mpv
 bind = CTRL SHIFT, Q, exec, [float; move 60% 5%] $app Conky
 
