--- a/hypr/conf/startup.conf
+++ b/hypr/conf/startup.conf
@@ -12,7 +12,7 @@ exec-once = hypridle
 
 #Wallpaper
 $wlp = $HOME/.config/hypr/scripts/wallpaper_select.sh
-# exec-once = $wlp daemon
+# exec-once = $wlp daemon 120
 
 # Setup clipboard
 exec-once = wl-paste --type text --watch cliphist store 
