--- a/hypr/conf/env.conf
+++ b/hypr/conf/env.conf
@@ -17,13 +17,9 @@ env = XCURSOR_PATH, /usr/share/icons:$HOME/.icons:$HOME/.local/share/icons
 # Mouse cursor
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-# env = XCURSOR_THEME,Vestia-Zeta-v2
-# env = XCURSOR_THEME,Vestia-Zeta
 # env = XCURSOR_THEME,LyraB-cursors
-# env = XCURSOR_THEME,miku-cursor-linux
-env = XCURSOR_THEME,Hatsune-Miku
-# env = XCURSOR_THEME,Kureiji-Ollie-v2
-# env = XCURSOR_THEME,Kureiji-Ollie
-# env = GTK_THEME,Graphite-pink-Light
-# env = GTK_ICON_THEME,breeze
-# env = HYPRCURSOR_THEME,Kureiji-Ollie-v2
+# env = XCURSOR_THEME,Hatsune-Miku
+env = XCURSOR_THEME,Bibata_Spirit
+
+# Theme
+env = GTK_ICON_THEME,papirus
