--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -5,132 +5,49 @@
 # ██║  ██║   ██║   ██║     ██║  ██║███████╗╚██████╔╝╚██████╗██║  ██╗
 # ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝╚══════╝ ╚═════╝  ╚═════╝╚═╝  ╚═╝
                                                                   
-general{
+general {
 	hide_cursor = true
 	ignore_empty_input = true
 }
 
-background{
-    path = /home/iuno/Pictures/Wallpaper/Waifu kok mayat.jpeg
-	# blur_size=0
-	# brightness = 0.7
-	# blur_passes=1
+background {
+    path = /home/iuno/Pictures/Wallpaper/Mayat.jpeg
+    blur_passes = 1
+    blur_size = 0.7
 }
 
-
-input-field{
-	size = 200,50
-	outline_thickness = 3
-	dots_size = 0.33
-	dots_spacing = 0.15
+input-field {
+    size = 100, 25
+    outline_thickness = 0
+    dots_size = 0.3
+    dots_space = 0.5
     dots_center = true
-	dots_rounding = -1
-	outer_color = rgb(15,15,15)
-	inner_color = rgba(200,200,200,0.7)
-	font_color = rgb(10,10,10)
-	font_family = Monocraft Nerd Font
-	fade_on_empty = false
-	fade_timeout = 1000
-	placeholder_text = <i>Password</i>
-	hide_input = false
-	rounding = -1
-	check_color = rgb(204,136,34)
-	fail_color = rgb(204,34,34)
-	fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
-	capslock_color = -1
-	bothlock_color = -1
-	invert_numlock = false
-	swap_font_color = false
-	position = 0,-100
-	halign = center
- 	valign = center 
-}
-
-label{
-    text = cmd[update:50] cat  /tmp/scripttext
+    inner_color = rgb(FFFFFF)
+    font_color = rgb(10, 10, 10)
+    hide_input = false
+    rounding = -1
+    check_color = rgb(255, 97, 97)
+    fail_color = rgb(255, 97, 97)
+    fail_transition = 300
+    position = 0, -20
     halign = center
     valign = center
-    position = 6,344
-    color = rgba(0, 0, 0,1.0)
-    font_size = 30
-    font_family = Monocraft Nerd Font
 }
 
-label{
-    text = cmd[update:50] cat /tmp/scripttext
-    halign = center
-    valign = center
-    position = 3,347
-    color = rgba(69, 118, 255,1.0)
-    font_size = 30
-    font_family = Monocraft Nerd Font
-}
+# label {
+#     text = cmd[update:1000] echo "$TIME"
+#     color = rgb(FFFFFF)
+#     font_size = 50
+#     font_family = Monocraft Nerd Font
+#     halign = center
+#     valign = botom
+#     shadow_passes = 5
+#     shadow_size = 10
+# }
 
-label{
-    text = cmd[update:50] cat /tmp/scripttext
-    halign = center
-    valign = center
-    position = 0,350
-    color = rgba(220, 220, 220,1.0)
-    font_size = 30
-    font_family = Monocraft Nerd Font
-}
-
-label{
-	text = cmd[update:1000] cat /tmp/weathertext
-	color = rgba(240, 151, 175, 1) 
-	font_size = 10
-    font_family = Monocraft Nerd Font
-    position = 65, 42
-    halign = left
-    valign = bottom
-}
-
-shape{
-    color=rgba(255, 51, 105,1.0)
-    rounding=1
-    halign=left
-	valign=bottom
-    position = 55,40
-    size=5,20
-}
-
-shape{
-    color=rgba(0,0,0,0.4)
-    rounding=8
-    halign=left
-    valign=bottom
-    position = 55,35
-    size=321,30  //change size dynamically
-}
-
-label{
-	text = cmd[update:1000] echo "$TIME12"
-	color = rgba(200,200,200,1.0)
-	font_size = 50
-	font_family = Monocraft Nerd Font
-	position = -50,110
-	halign = right
-	valign = bottom
-	shadow_passes = 5
-	shadow_size = 10
-}
-
-label{
-    text = cmd[update:60] date +"%A, %B %d, %Y"
-	color = rgba(200,200,200,1.0)
-	font_size = 25
-	font_family = Monocraft Nerd Font
-	position = -50,40
-	halign = right
-	valign = bottom
-	shadow_passes = 5
-	shadow_size = 10
-}
-
-image{
+image {
     path = /var/lib/AccountsService/icons/$USER
-    size = 185
+    size = 100
     border_size = 7
     border_color = rgba(21,21,21,0.6)
     halign = center
@@ -138,44 +55,22 @@ image{
     position = 0,100
 }
 
-label{
-	text = $USER
-	color = rgba(200,200,200,1.0)
-    font_size = 20
+label {
+	text = foto my bini gwejh
+    font_size = 10
     font_family = Monocraft Nerd Font
-    position = 0,-40
+    position = 0,20
     halign = center
     valign = center
     shadow_passes = 5
     shadow_size = 10
 }
 
-shape{
-    color=rgba(252, 186, 3,1)
-    rounding=1
-    halign=left
-    valign=bottom
-    position = 385,41
-	size=5,20
-}
-
-label{
-    text = cmd[update:1000] echo -e "$(~/.config/hypr/scripts/battery.sh)"
-    color = rgba(247,225,161,1.0)
-    font_size = 10
-    font_family = Monocraft Nerd Font
-    position = 397,40
-    halign = left
-    valign = bottom
-}
-
-shape{
-    color=rgba(0,0,0,0.4)
-    rounding=8
-    halign=left
-    valign=bottom
-    position = 385,35
-    size=70,30
-}
-   
-
+# label {
+#     text = cmd[update:50] cat  /tmp/scripttext
+#     halign = center
+#     valign = center
+#     position = 6,344
+#     font_size = 30
+#     font_family = Monocraft Nerd Font
+# }
