--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -9,7 +9,7 @@ $mainMod = SUPER
 
 # Open application
 $app = $HOME/.config/hypr/scripts/apps.sh
-bind = $mainMod, Q, exec, kitty
+bind = $mainMod, Q, exec, Kdenlive
 bind = $mainMod, R, exec, $app Menu
 bind = $mainMod, T, exec, Telegram
 bind = $mainMod, D, exec, discord
@@ -19,7 +19,7 @@ bind = $mainMod, B, exec, brave
 bind = CTRL ALT, T, exec, foot
 bind = $mainMod, V, exec, code
 
-# Floating aplication
+# Floating application
 bind = CTRL SHIFT, Escape, exec, [float; move 20% 17.5%; size 60% 65%] $app Btop
 bind = CTRL ALT, E, exec, [float; move 0.5% 1%; size 55% 56% ] $app Yazi
 bind = CTRL ALT, C, exec, [float; move 51.50% 64%; size 48% 35%] foot
@@ -29,6 +29,10 @@ bind = $mainMod SHIFT, Q,  exec, [float; move 20% 17.5%; size 60% 65%] foot
 bind = $mainMod SHIFT, C, exec, [float; move 0.5% 72%; size 99% 25%] foot
 bind = SHIFT, F12, exec, [float; move 59.5% 6%; size 39.5% 65% ] $app Mpv
 bind = CTRL SHIFT, Q, exec, [float; move 60% 5%] $app Conky
+
+# Game
+bind = $mainMod, K, exec, $app Game
+
 
 # Launcher
 $scr = $HOME/.config/hypr/scripts
@@ -57,8 +61,7 @@ bind = ,F10, exec, $scrc ReCoRdInG
 # Toggle 
 $tgl = $HOME/.config/hypr/scripts/toggle.sh
 bind = CTRL ALT, L, exec, $scr/hyprlock.sh
-bind = $mainMod, escape, exec, $tgl Eww
-bind = $mainMod SHIFT, escape, exec,  $tgl Waybar
+bind = $mainMod, escape, exec, $tgl Waybar
 bind = ,F8, exec, $tgl Hypridle
 bind = ,F12, exec, $tgl Clock
 
