--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -11,7 +11,7 @@ general {
 }
 
 background {
-    path = /home/iuno/Pictures/Wallpaper/Mayat.jpeg
+    path = $HOME/.cache/swww/image.jpg
     blur_passes = 1
     blur_size = 0.7
 }
@@ -34,17 +34,6 @@ input-field {
     valign = center
 }
 
-# label {
-#     text = cmd[update:1000] echo "$TIME"
-#     color = rgb(FFFFFF)
-#     font_size = 50
-#     font_family = Monocraft Nerd Font
-#     halign = center
-#     valign = botom
-#     shadow_passes = 5
-#     shadow_size = 10
-# }
-
 image {
     path = /var/lib/AccountsService/icons/$USER
     size = 100
@@ -66,11 +55,11 @@ label {
     shadow_size = 10
 }
 
-# label {
-#     text = cmd[update:50] cat  /tmp/scripttext
-#     halign = center
-#     valign = center
-#     position = 6,344
-#     font_size = 30
-#     font_family = Monocraft Nerd Font
-# }
+label {
+    text = cmd[update:50] cat  /tmp/scripttext
+    halign = center
+    valign = center
+    position = 6,344
+    font_size = 30
+    font_family = Monocraft Nerd Font
+}
