--- a/hypr/conf/windowrule.conf
+++ b/hypr/conf/windowrule.conf
@@ -10,17 +10,20 @@
 $&=override
 windowrule = idleinhibit fullscreen, class:^(.*LibreWolf.*)$|^(.*floorp.*)$|^(.*brave-browser.*)$|^(.*firefox.*)$|^(.*chromium.*)$|^(.*zen.*)$|^(.*vivaldi.*)$
 windowrule = idleinhibit fullscreen, class:^(.*celluloid.*)$|^(.*mpv.*)$|^(.*vlc.*)$
-windowrule = float,title:^(Open)$
+windowrule = float, title:^(Open)$
 windowrule = float, title:^(Authentication Required)$
 windowrule = float, title:^(Add Folder to Workspace)$
-windowrule = float,initialtitle:^(Open File)$
-windowrule = float,initialtitle:^(Open Folder)$
-windowrule = float,title:^(Choose Files)$
-windowrule = float,title:^(Save As)$
-windowrule = float,title:^(Save File)$
-windowrule = float,class:^(mpv)$
-windowrule = float,class:^(org.kde.kdeconnect.app)$
-windowrule = float,class:^(org.kde.kdeconnect.daemon)$
+windowrule = float, title:^(Open File)$
+windowrule = float, title:^(Open Folder)$
+windowrule = float, title:^(Choose Files)$
+windowrule = float, title:^(Save As)$
+windowrule = float, title:^(Save File)$
+windowrule = float, class:^(mpv)$
+windowrule = float, class:^(org.kde.kdeconnect.app)$
+windowrule = float, class:^(org.kde.kdeconnect.daemon)$
+windowrule = float, class:^(org.pulseaudio.pavucontrol)$
+windowrule = float, title:^(.*wants to open.*)$
+windowrule = float, title:^(Bitwarden)$
 
 windowrule = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 windowrule = keepaspectratio, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
@@ -29,8 +32,6 @@ windowrule = size 25%, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 windowrule = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 windowrule = pin, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 
-# Term
-windowrulev2 = opacity 0.85 $& 0.85 $& 1,class:^(kitty)$
 windowrulev2 = group, class:^([Cc]ode)$
 windowrulev2 = group, class:^([Cc]ode-oss)$
 windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(foot)$
@@ -42,8 +43,6 @@ windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^([Ss]potify)$
 windowrulev2 = opacity 0.80 $& 0.80 $& 1,initialTitle:^([Ss]potify Free)$
 windowrulev2 = opacity 0.80 $& 0.80 $& 1,initialTitle:^([Ss]potify Premium)$
 windowrulev2 = opacity 0.80 $& 0.80 $& 1,initialTitle:^([Ss]potify - Web Player: Music for everyone)$
-
-# windowrulev2 = opacity 0.96 $& 0.00 $& 1,class:^([Cc]ode-oss)$
 windowrulev2 = opacity 0.50 $& 0.50 $& 1,class:^([Rr]ofi)$
 
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
