--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -8,15 +8,10 @@
 $f = "/var/lib/AccountsService/icons/$USER"
 
 general {
-    lock_cmd = bash -c 'pidof hyprlock >/dev/null || hyprlock'
+    lock_cmd = '$HOME/.config/hypr/scripts/hyprlock.sh'
     before_sleep_cmd = loginctl lock-session
-    after_sleep_cmd = hyprctl dispatch dpms on
-}
-
-listener {
-    timeout = 240
-    on-timeout = bash -c '$HOME/.config/hypr/scripts/hyprlock.sh'
-    on-resume = hyprctl dispatch dpms on
+    ignore_systemd_inhibit = false 
+    ignore_dbus_inhibit = false 
 }
 
 listener {
@@ -26,9 +21,20 @@ listener {
 }
 
 listener {
-    timeout = 600
-    on-timeout = brightnessctl -s set 10
+    timeout = 150
+    on-timeout = brightnessctl -s set 1
     on-resume = brightnessctl -r
+}
+
+listener {
+    timeout = 240
+    on-timeout = loginctl lock-session
+}
+
+listener {
+    timeout = 300
+    on-timeout = hyprctl dispatch dpms off 
+    on-resume = hyprctl dispatch dpms on   
 }
 
 listener {
