--- a/hypr/conf/windowrule.conf
+++ b/hypr/conf/windowrule.conf
@@ -19,11 +19,13 @@ windowrule = float, title:^(Choose Files)$
 windowrule = float, title:^(Save As)$
 windowrule = float, title:^(Save File)$
 windowrule = float, class:^(mpv)$
-windowrule = float, class:^(org.kde.kdeconnect.app)$
+windowrule = float, title:^(KDE Connect)$
+# windowrule = keepaspectratio, title:^(KDE Connect)$
 windowrule = float, class:^(org.kde.kdeconnect.daemon)$
 windowrule = float, class:^(org.pulseaudio.pavucontrol)$
 windowrule = float, title:^(.*wants to open.*)$
 windowrule = float, title:^(Bitwarden)$
+windowrule = float, title:^(MyAnimeList)$
 
 windowrule = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 windowrule = keepaspectratio, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
